force-app/main/default/objects/AccountContactRelation/fields/AccountContact_Id__c.field-meta.xml
<CustomField>
    <fullName>AccountContact_Id__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>MDM AccountContact Id</description>
    <externalId>true</externalId>
    <inlineHelpText>MDM AccountContact Id</inlineHelpText>
    <label>AccountContact Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>