force-app/main/default/objects/AccountContactRelation/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field stores email address for HCO-HCP relationship</description>
    <inlineHelpText>This field stores email address for HCO-HCP relationship</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>