force-app/main/default/objects/AccountContactRelation/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field stores Job title for HCO-HCP relationship</description>
    <inlineHelpText>This field stores Job title for HCO-HCP relationship</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>