force-app/main/default/objects/AccountContactRelation/fields/MDM_Id__c.field-meta.xml
<CustomField>
    <fullName>MDM_Id__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field stores unique MDM identifier for HCO-HCP relationship</description>
    <externalId>true</externalId>
    <inlineHelpText>This field stores unique MDM identifier for HCO-HCP relationship</inlineHelpText>
    <label>MDM Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>