force-app/main/default/objects/AccountContactRelation/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field stores contact number for HCO-HCP relationship</description>
    <inlineHelpText>This field stores contact number type for HCO-HCP relationship</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>