force-app/main/default/objects/AccountContactRelation/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field stores relationship type for HCO-HCP relationship</description>
    <inlineHelpText>This field stores relationship type for HCO-HCP relationship</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>IndependentContractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>