force-app/main/default/objects/AccountContactRelation/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field stores current status for HCO-HCP relationship</description>
    <inlineHelpText>This field stores cusrrent status for HCO-HCP relationship</inlineHelpText>
    <label>Relationship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>