force-app/main/default/objects/AccountContactRelation/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This is used to store the latest JSON updatedtime</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>